--- a/src/partials/activity/activity.html
+++ b/src/partials/activity/activity.html
@@ -3,6 +3,16 @@
     <div class="activity__content">
       <div class="pages-header activity__pages-header">
         <div class="pages-links activity__pages-links">
+          <nav class="breadcrumb-custom activity__breadcrumb">
+            <ul class="breadcrumb-custom-list list-reset">
+              <li class="breadcrumb-custom-item">
+                <a href="/" class="breadcrumb-custom-link">Главная</a>
+              </li>
+              <li class="breadcrumb-custom-item">
+                Направления деятельности
+              </li>
+            </ul>
+          </nav>
           <nav class="pages-links-nav">
             <ul class="pages-links-list d-flex flex-wrap align-items-center list-reset">
               <li class="pages-links-item">
@@ -33,14 +43,14 @@
             </ul>
           </nav>
         </div>
-        <h1 class="pages-title d-none d-lg-block text-h2 text-uppercase">
+        <h1 class="pages-title d-none d-lg-block text-uppercase">
           направления деятельности
         </h1>
       </div>
       <div class="activity__block">
         <div class="main-about__content d-flex flex-lg-row flex-column-reverse">
           <div class="main-about__left d-flex flex-lg-row flex-column">
-            <div class="main-about__icons d-flex activity__icons flex-wrap flex-lg-column">
+            <div class="main-about__icons d-flex flex-wrap flex-lg-column">
               <div class="main-about__icon d-flex align-items-center">
               <span class="main-about__icon-svg">
                 <svg width="50" height="50" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -108,22 +118,36 @@
               </span>
               </div>
             </div>
+            <div class="main-about__link-mobile">
+              <a class="main-about__link">
+                история компании
+              </a>
+            </div>
           </div>
           <div class="main-about__right d-flex flex-column justify-content-between">
-            <h2 class="main-about__title text-h2 text-uppercase">
-              Научно-техническое предприятие "Криптософт"
-            </h2>
-            <div class="main-about__descr activity__descr d-flex flex-column">
-              <p class="main-about__text descr1">
-                НТП "Криптософт" является ведущим предприятием в России в области информационной безопасности, специализирующимся на разработке аппаратных и программных средств защиты информации.  С момента своего основания в 1993 году компания демонстрирует стабильный рост всех показателей и активно накапливает научный потенциал
-              </p>
-              <p class="main-about__text descr1">
-                Основные направления деятельности включают проведение научно-исследовательских и опытно-конструкторских работ, изготовление, а также единичные и серийные поставки изделий специального назначения
-              </p>
-              <p class="main-about__text descr1">
-                НТП "Криптософт" активно занимается разработкой систем контроля доступа информации (СКЗИ) новейших поколений и соответствует строгим требованиям лицензирования ФСБ РФ, ФСТЭК РФ и других регулирующих органов
-              </p>
+            <div class="main-about__right-top">
+              <h2 class="main-about__title text-h2 text-uppercase">
+                Научно-техническое предприятие "Криптософт"
+              </h2>
+              <div class="main-about__descr d-flex flex-column">
+                <p class="main-about__text descr1">
+                  НТП "Криптософт" является ведущим предприятием в России в области информационной безопасности, специализирующимся на разработке аппаратных и программных средств защиты информации.  С момента своего основания в 1993 году компания демонстрирует стабильный рост всех показателей и активно накапливает научный потенциал
+                </p>
+                <p class="main-about__text descr1">
+                  Основные направления деятельности включают проведение научно-исследовательских и опытно-конструкторских работ, изготовление, а также единичные и серийные поставки изделий специального назначения
+                </p>
+                <p class="main-about__text descr1">
+                  НТП "Криптософт" активно занимается разработкой систем контроля доступа информации (СКЗИ) новейших поколений и соответствует строгим требованиям лицензирования ФСБ РФ, ФСТЭК РФ и других регулирующих органов
+                </p>
+              </div>
             </div>
+
+            <div class="main-about__link-wrap">
+              <a class="main-about__link">
+                история компании
+              </a>
+            </div>
+
           </div>
         </div>
       </div>
