--- a/src/partials/history/history.html
+++ b/src/partials/history/history.html
@@ -3,6 +3,16 @@
     <div class="history__content">
       <div class="pages-header">
         <div class="pages-links">
+          <nav class="breadcrumb-custom history__breadcrumb">
+            <ul class="breadcrumb-custom-list list-reset">
+              <li class="breadcrumb-custom-item">
+                <a href="/" class="breadcrumb-custom-link">Главная</a>
+              </li>
+              <li class="breadcrumb-custom-item">
+                История
+              </li>
+            </ul>
+          </nav>
           <nav class="pages-links-nav">
             <ul class="pages-links-list d-flex flex-wrap align-items-center list-reset">
               <li class="pages-links-item">
@@ -33,7 +43,7 @@
             </ul>
           </nav>
         </div>
-        <h1 class="pages-title text-h2 text-uppercase">
+        <h1 class="pages-title text-uppercase">
           значимые события нтп «криптософт»
         </h1>
       </div>
