--- a/src/partials/main/facts.html
+++ b/src/partials/main/facts.html
@@ -21,7 +21,7 @@
           <h3 class="facts__item-title">
             30 лет
           </h3>
-          <p class="descr7 facts__item-text text-uppercase">
+          <p class="descr7 facts__item-text">
             Накопления и применения экспертизы в области информационной безопасности
           </p>
         </div>
@@ -29,12 +29,12 @@
           <span class="facts__svg"></span>
           <div class="facts__descr">
             <h3 class="facts__item-title">
-              <span class="text-h6">
+              <span>
                 500
               </span>
             </h3>
             <p class="descr7 facts__item-text descr-1-2">
-              успешно выполненных ниокр
+              Успешно выполненных НИОКР
             </p>
           </div>
         </div>
@@ -42,7 +42,7 @@
           <span class="facts__svg"></span>
           <div class="facts__descr">
             <h3 class="facts__item-title">
-               <span class="text-h6">7000 </span>м²
+               <span>7000</span> м²
             </h3>
             <p class="descr7 facts__item-text descr-1-2">
               Помещений для разработки, тестирования, отладки производственных линий и собственная испытательная лаборатория, аккредитованная ФСБ России
@@ -53,7 +53,7 @@
           <span class="facts__svg"></span>
           <div class="facts__descr">
             <h3 class="facts__item-title">
-              более<span class="text-h6"> 400 </span>сотрудников
+              более <span>400</span> сотрудников
             </h3>
             <p class="descr7 facts__item-text descr-1-2">
               специализирующихся на разработке аппаратных и программных средств защиты информации
