--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -16,10 +16,10 @@
               <div class="container-fluid hero__left-container">
                 <div class="hero__left-content">
                   <div class="hero__left-top">
-                    <h1 class="text-h1 hero__title">
+                    <h1 class="hero__title">
                       НТП «КРИПТОСОФТ»
                     </h1>
-                    <p class="descr2 descr-2-1 hero__descr">
+                    <p class="hero__descr">
                       Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
                       и программных средств защиты информации
                     </p>
