--- a/src/partials/main/news.html
+++ b/src/partials/main/news.html
@@ -2,7 +2,7 @@
   <div class="custom-container container-fluid">
     <div class="main-news__content position-relative">
       <div class="main-news__top d-flex align-items-center">
-        <h2 class="text-h2 text-uppercase">
+        <h2 class="text-h2 main-news__title text-uppercase">
           новости
         </h2>
         <a href="news.html" class="main-news__link">
