--- a/src/partials/qp/qp.html
+++ b/src/partials/qp/qp.html
@@ -5,10 +5,10 @@
         <img class="qp__hero-pic">
       </div>
       <div class="qp__hero-descr">
-        <h1 class="qp__title text-h1 text-uppercase">
+        <h1 class="qp__title text-uppercase">
           ДОВЕРЕННАЯ ОПЕРАЦИОННАЯ СИСТЕМА QP OC
         </h1>
-        <p class="qp__text descr2 descr-2-1">
+        <p class="qp__text">
           Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
           и программных средств защиты информации
         </p>
@@ -19,9 +19,19 @@
     <div class="custom-container container-fluid">
       <div class="qp__block d-flex flex-wrap">
         <div class="qp__left col-12 col-md-8">
+          <nav class="breadcrumb-custom qp__breadcrumb">
+            <ul class="breadcrumb-custom-list list-reset">
+              <li class="breadcrumb-custom-item">
+                <a href="/" class="breadcrumb-custom-link">Главная</a>
+              </li>
+              <li class="breadcrumb-custom-item breadcrumb-custom-blue">
+                Доверенная операционная система QP OC
+              </li>
+            </ul>
+          </nav>
           <div class="qp__left-title d-flex align-items-center">
             <span class="qp__left-title-svg">
-              <svg width="190" height="72" viewBox="0 0 190 72" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg width="207" height="77" viewBox="0 0 190 72" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip0_1191_4925)">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M103.739 45.2941C103.739 46.5746 104.102 47.5136 104.806 48.1325C105.51 48.73 106.343 49.0502 107.324 49.0502C107.815 49.0502 108.178 48.9861 108.455 48.8367L106.065 46.916L108.754 43.6935L110.888 45.4008V25.7243C110.888 24.4438 110.525 23.5048 109.821 22.8859C109.117 22.2884 108.285 21.9683 107.303 21.9683C106.321 21.9683 105.489 22.2671 104.785 22.8859C104.08 23.4835 103.718 24.4438 103.718 25.7243V45.2941H103.739ZM98.4463 25.7457C98.4463 24.2518 98.7024 22.9286 99.2146 21.7975C99.7268 20.6451 100.431 19.7061 101.285 18.9378C102.117 18.2122 103.056 17.6574 104.102 17.2732C105.147 16.8891 106.214 16.697 107.282 16.697C108.349 16.697 109.416 16.8891 110.461 17.2732C111.507 17.6574 112.467 18.2122 113.342 18.9378C114.175 19.7061 114.836 20.6451 115.37 21.7975C115.903 22.95 116.138 24.2518 116.138 25.7457V45.3155C116.138 46.7667 115.882 48.0471 115.37 49.1142L118.635 51.7605L115.946 54.983L112.83 52.4434C111.251 53.7239 109.394 54.3641 107.282 54.3641C106.214 54.3641 105.147 54.172 104.102 53.7879C103.056 53.4037 102.096 52.8275 101.285 52.0806C100.431 51.355 99.7268 50.4373 99.2146 49.3276C98.7024 48.2179 98.4463 46.8734 98.4463 45.3155V25.7457Z" fill="#717E7C"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M120.811 53.8306V16.6757H128.708C130.159 16.6757 131.418 16.8677 132.528 17.2519C133.637 17.636 134.619 18.3189 135.515 19.2793C136.412 20.261 137.031 21.392 137.372 22.6939C137.714 23.9957 137.884 25.767 137.884 27.9865C137.884 29.6511 137.799 31.0596 137.607 32.212C137.415 33.3644 137.009 34.4315 136.39 35.4558C135.665 36.6723 134.704 37.6113 133.509 38.2942C132.314 38.9771 130.714 39.3186 128.75 39.3186H126.061V53.8306H120.79H120.811ZM126.061 21.6908V34.3248H128.601C129.668 34.3248 130.5 34.1754 131.076 33.8553C131.653 33.5351 132.101 33.1083 132.378 32.5535C132.656 32.0413 132.826 31.3797 132.869 30.6328C132.912 29.8645 132.954 29.0108 132.954 28.0718C132.954 27.1968 132.954 26.3859 132.912 25.5962C132.869 24.8066 132.72 24.1237 132.442 23.5262C132.165 22.9286 131.759 22.4804 131.205 22.1603C130.65 21.8402 129.86 21.6908 128.836 21.6908H126.104H126.061Z" fill="#717E7C"/>
@@ -216,6 +226,12 @@
                   <div class="swiper-slide qp__swiper-slide">
                     <div class="qp__swiper-slide-top">
                       <img src="./img/4. Криптофон - ПК.png">
+                      <div class="qp__swiper-increase">
+                        <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M19.25 19.25L14.4864 14.4864M14.4864 14.4864C15.7305 13.2422 16.5 11.5235 16.5 9.625C16.5 5.82804 13.422 2.75 9.625 2.75C5.82804 2.75 2.75 5.82804 2.75 9.625C2.75 13.422 5.82804 16.5 9.625 16.5C11.5235 16.5 13.2422 15.7305 14.4864 14.4864Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+
+                      </div>
                     </div>
                     <div class="qp__swiper-slide-bottom">
                       Краткое описание продукта / скрина / программы
@@ -310,4 +326,58 @@
       </div>
     </div>
   </div>
+  <div class="js-modal-swiper-qp modal fade" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog-centered modal-dialog qp__modal-swiper-dialog">
+      <div class="modal-content qp__modal-swiper-content">
+        <div class="modal-body qp__modal-swiper-body">
+          <div class="qp__modal-swiper swiper">
+            <div class="swiper-wrapper">
+              <div class="qp__modal-swiper-slide swiper-slide">
+                <div class="qp__modal-swiper-top swiper-zoom-container">
+                  <img src="./img/4. Криптофон - ПК.png">
+                </div>
+                <div class="qp__modal-swiper-bottom">
+                  Краткое описание продукта / скрина / программы
+                </div>
+              </div>
+              <div class="qp__modal-swiper-slide swiper-slide">
+                <div class="qp__modal-swiper-top swiper-zoom-container">
+                  <img src="./img/5. Криптофон - телефон.png">
+                </div>
+                <div class="qp__modal-swiper-bottom">
+                  Краткое описание продукта / скрина / программы
+                </div>
+              </div>
+              <div class="qp__modal-swiper-slide swiper-slide">
+                <div class="qp__modal-swiper-top swiper-zoom-container">
+                  <img src="./img/4. Криптофон - ПК.png">
+                </div>
+                <div class="qp__modal-swiper-bottom">
+                  Краткое описание продукта / скрина / программы
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <button class="qp__modal-swiper-btn btn-reset qp__modal-swiper-prev">
+      <svg width="26" height="26" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.7906 5.23017C13.0777 5.52875 13.0684 6.00353 12.7698 6.29063L8.83208 10L12.7698 13.7094C13.0684 13.9965 13.0777 14.4713 12.7906 14.7698C12.5035 15.0684 12.0287 15.0777 11.7302 14.7906L7.23017 10.5406C7.08311 10.3992 7 10.204 7 10C7 9.79599 7.08311 9.60078 7.23017 9.45938L11.7302 5.20938C12.0287 4.92228 12.5035 4.93159 12.7906 5.23017Z" fill="white"/>
+      </svg>
+    </button>
+    <button class="qp__modal-swiper-btn btn-reset qp__modal-swiper-next">
+      <svg width="26" height="26" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M7.20938 5.23017C6.92228 5.52875 6.93159 6.00353 7.23017 6.29063L11.1679 10L7.23017 13.7094C6.93159 13.9965 6.92228 14.4713 7.20938 14.7698C7.49647 15.0684 7.97125 15.0777 8.26983 14.7906L12.7698 10.5406C12.9169 10.3992 13 10.204 13 10C13 9.79599 12.9169 9.60078 12.7698 9.45938L8.26983 5.20938C7.97125 4.92228 7.49647 4.93159 7.20938 5.23017Z" fill="white"/>
+      </svg>
+    </button>
+    <div class="licenses__modal-close">
+      <button type="button" class="licenses__modal-close-btn btn-reset" data-bs-dismiss="modal" aria-label="Закрыть">
+        <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 1L13 13M25 25L13 13M13 13L25 1L1 25" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </button>
+    </div>
+  </div>
+
 </section>
