--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,16 +1,16 @@
 :root {
-  --font-family: 'Sofia Sans', 'Sofia Sans Condensed', Helvetica, Arial;
+  --font-family: 'Sofia Sans', 'Sofia Sans Condensed', 'Sofia Sans Semi Condensed', Helvetica, Arial;
 
-  --content-width: 1440px;
+  --content-width: 1572px;
   --container-offset: 100px;
   --container-offset-laptop: 50px;
-  --container-offset-mobile: 20px;
+  --container-offset-mobile: 24px;
 
   --black: #272727;
   --white: #FFFFFF;
-  --green: #009A6D;
+  --green: #00B982;
   --blue: #45ADC7;
-  --green-secondary: #00B883;
+  --green-secondary: #00B982;
   --gray: #747E7C;
   --gray-secondary: #BCC7C4;
   --gray-light: #F1F1F1;
