--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Криптософт</title>
 
-  <link rel="preload" href="/fonts/SofiaSans-Regular.woff2" as="font">
-  <link rel="preload" href="/fonts/SofiaSans-Light.woff2" as="font">
-  <link rel="preload" href="/fonts/SofiaSansCondensed-Bold.woff2" as="font">
-  <link rel="preload" href="/fonts/SofiaSansCondensed-SemiBold.woff2" as="font">
+  <link rel="preload" href="/fonts/sofiasans-regular.woff2" as="font">
+  <link rel="preload" href="/fonts/sofiasans-light.woff2" as="font">
+  <link rel="preload" href="/fonts/sofiasanscondensed-medium.woff2" as="font">
+  <link rel="preload" href="/fonts/sofiasanscondensed-bold.woff2" as="font">
+  <link rel="preload" href="/fonts/sofiasanssemicondensed-regular.woff2" as="font">
   <link rel="stylesheet" href="./bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="./swiper/swiper-bundle.min.css">
   <link rel="stylesheet" href="./accordion/accordion.min.css">
