--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
                 <ul class="header__nav-list list-reset d-flex align-items-center">
                     <li class="header__nav-item">
                         <div class="dropdown header__dropdown">
-                            <button class="btn-reset descr1 header__dropdown_btn p-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn-reset  header__dropdown_btn p-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <span class="header__dropdown_btn-text">
                                     О компании
                                 </span>
@@ -59,7 +59,7 @@
                     <li class="header__nav-item">
                         <div class="dropdown header__dropdown">
                             <button class="btn-reset header__dropdown_btn p-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="descr1 header__dropdown_btn-text">
+                                <span class=" header__dropdown_btn-text">
                                     Решения
                                 </span>
                                 <span class="header__dropdown_btn-svg">
@@ -98,12 +98,12 @@
                         </div>
                     </li>
                     <li class="header__nav-item">
-                        <a href="news.html" class="header__link descr1">
+                        <a href="news.html" class="header__link ">
                             Новости
                         </a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="work.html" class="header__link descr1">
+                        <a href="work.html" class="header__link ">
                             Вакансии
                         </a>
                     </li>
