--- a/src/partials/main/about.html
+++ b/src/partials/main/about.html
@@ -2,7 +2,7 @@
   <div class="custom-container container-fluid">
     <div class="main-about__content d-flex flex-lg-row flex-column-reverse">
       <div class="main-about__left d-flex flex-lg-row flex-column">
-        <div class="main-about__icons d-flex flex-wrap flex-lg-column justify-content-lg-between">
+        <div class="main-about__icons d-flex flex-wrap flex-lg-column">
           <div class="main-about__icon d-flex align-items-center">
               <span class="main-about__icon-svg">
                 <svg width="50" height="50" viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg">
