--- a/src/scss/components/activity/activity.scss
+++ b/src/scss/components/activity/activity.scss
@@ -1,6 +1,10 @@
 .activity {
   padding: 83px 0 0;
 
+  &__breadcrumb {
+    margin-bottom: 50px;
+  }
+
   &__content {
     padding: 60px 0 120px;
   }
@@ -25,6 +29,10 @@
   .activity {
     padding: 80px 0 0;
 
+    &__breadcrumb {
+      margin-bottom: 30px;
+    }
+
     &__content {
       padding: 40px 0 60px;
     }
@@ -35,7 +43,7 @@
       }
 
       &-header {
-        margin-bottom: 20px;
+        margin-bottom: 40px;
       }
     }
   }
