--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -2,26 +2,32 @@
   background: linear-gradient(176.58deg, #009A6D -4.58%, #027755 50.28%);
 
   &__content {
-    padding: 30px 0 20px;
+    padding: 40px 0 40px;
   }
 
   &__link {
     color: white;
     text-transform: uppercase;
-    font-size: var(--text-size-14);
-    line-height: var(--text-height-135);
+    font-size: var(--text-size-16);
+    line-height: var(--text-height-125);
+    font-family: "Sofia Sans Condensed";
+    font-weight: 500;
     @include hoverUnderling(var(--white));
-
     &-second {
       text-transform: none;
+      font-family: "Sofia Sans";
+      font-size: 1.4rem;
+      line-height: 120%;
+      font-weight: 300;
     }
   }
 
   &__box {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    gap: 50px;
-    margin-bottom: 24px;
+    column-gap: 30px;
+    row-gap: 55px;
+    margin-bottom: 50px;
 
 
     &-item {
@@ -30,10 +36,14 @@
       }
 
       &:nth-child(2) {
-        grid-column: 1 / 6;
+        grid-column: 1 / 3;
       }
 
       &:nth-child(3) {
+        grid-column: 3/6;
+      }
+
+      &:nth-child(4) {
         grid-column: 6/9;
       }
 
@@ -47,21 +57,15 @@
 
   &__block {
     &-first {
+      justify-content: space-between;
       gap: 50px;
-    }
-
-    &-nav {
-      &:first-child {
-        max-width: 168px;
-        width: 100%;
-      }
     }
   }
 
   &__top {
     display: flex;
     align-items: center;
-    gap: 50px;
+    gap: 46px;
   }
 
   &__call {
@@ -69,7 +73,7 @@
     border-color: var(--white);
     color: var(--white);
     width: auto;
-    padding: 8px 30px;
+    padding: 9px 20px;
     &:hover {
       color: var(--green);
       background-color: var(--white);
@@ -80,19 +84,23 @@
     &-list {
       display: flex;
       flex-direction: column;
-      gap: 20px;
+      gap: 30px;
     }
 
     &-title {
       color: var(--white);
+      font-size: 2rem;
+      line-height: 130%;
       margin-bottom: 4px;
       text-transform: uppercase;
     }
+
     &-descr {
       color: var(--white);
-      margin-bottom: 6px;
+      margin-bottom: 12px;
+      font-weight: 300;
       font-size: var(--text-size-14);
-      line-height: var(--text-height-135);
+      line-height: var(--text-height-120);
 
       a {
         color: var(--white);
@@ -103,13 +111,13 @@
   &__map {
     max-width: none;
     width: 100%;
-    height: 119px;
+    height: 175px;
     border-radius: 4px;
   }
 
   &__moose {
-    width: 90px;
-    height: 93px;
+    width: 115px;
+    height: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -126,8 +134,9 @@
   &__copyright {
     text-align: center;
     color: var(--white);
-    font-size: 12px;
-    line-height: var(--text-height-135);
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: var(--text-height-120);
   }
 
 }
@@ -141,10 +150,14 @@
         }
 
         &:nth-child(2) {
-          grid-column: 1 / 8;
+          grid-column: 1 / 4;
         }
 
         &:nth-child(3) {
+          grid-column: 4 / 8;
+        }
+
+        &:nth-child(4) {
           grid-column: 8 / 13;
         }
 
@@ -164,11 +177,15 @@
       &-item {
 
         &:nth-child(2) {
-          grid-column: 1 / 9;
+          grid-column: 1 / 4;
         }
 
         &:nth-child(3) {
-          grid-column: 9 / 13;
+          grid-column: 4 / 9;
+        }
+
+        &:nth-child(4) {
+          grid-column: 9/13;
         }
       }
     }
@@ -178,16 +195,19 @@
 @media screen and (max-width: 767px) {
   .footer {
     &__content {
-      padding: 24px 0;
+      padding: 20px 0 24px;
     }
 
     &__logo {
       svg {
-        width: 162px;
-        height: 50px;
+        width: 155px;
+        height: 48px;
       }
     }
 
+    &__call {
+      padding: 5.5px 24px;
+    }
 
     &__address {
       max-width: 100%;
@@ -224,10 +244,14 @@
           grid-column: 1 / 13;
         }
         &:nth-child(2) {
-          grid-column: 1 / 13;
+          grid-column: 1 / 5;
         }
 
         &:nth-child(3) {
+          grid-column: 5/13;
+        }
+
+        &:nth-child(4) {
           grid-column: 1 / 13;
           grid-row: 4 / auto;
         }
@@ -253,12 +277,22 @@
     &__top {
       flex-direction: column;
       align-items: start;
-      gap: 15px;
+      gap: 30px;
     }
 
     &__box {
       column-gap: 0;
+      row-gap: 40px;
+      margin-bottom: 30px;
       &-item {
+        &:nth-child(2) {
+          grid-column: 1 /13;
+        }
+
+        &:nth-child(3) {
+          grid-column: 1 /13;
+        }
+
         &:last-child {
           grid-column: 1 / 13;
         }
@@ -270,18 +304,17 @@
         flex-direction: column;
         position: relative;
         gap: 30px;
+      }
 
-        nav {
-          max-width: 190px;
-        }
+      &-nav {
+        margin-right: 90px;
       }
 
     }
 
     &__list {
-      gap: var(--gap-12);
       &-second {
-        align-items: center;
+        align-items: start;
       }
     }
 
@@ -293,14 +326,20 @@
       position: absolute;
       right: 0;
       bottom: 0;
+      width: 79px;
+      height: 82px;
+      svg {
+        width: 79px;
+        height: 82px;
+      }
     }
 
     &__moose.active-mobile {
       display: inline-block;
     }
 
-    &__copyright {
-      font-size: 1.1rem;
+    &__map {
+      height: 139px;
     }
   }
 
