--- a/src/scss/components/licenses/licenses.scss
+++ b/src/scss/components/licenses/licenses.scss
@@ -1,59 +1,91 @@
 .licenses {
+  background-color: var(--gray-f5);
   padding: 82px 0 120px;
 
   &__content {
     padding-top: 60px;
   }
 
+  &__top {
+    padding-top: 60px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    justify-content: space-between;
+  }
+
+  &__pages-title {
+    padding-top: 0;
+
+  }
+
+  &__download-all {
+    @include btn();
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    border: 1px solid var(--green);
+    border-radius: 4px;
+    padding: 9px 20px;
+    &-svg {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    span:first-child {
+      svg path {
+        transition: fill .3s ease-in-out;
+      }
+    }
+
+    &:hover {
+      span:first-child {
+        svg path {
+          fill: var(--white)
+        }
+      }
+    }
+  }
+
   &__filter {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 24px;
+    margin-bottom: 60px;
+
     &-list {
-      max-width: 600px;
-      width: 100%;
       display: flex;
       flex-wrap: wrap;
-      column-gap: 30px;
-      row-gap: 12px;
-
-    }
-    &-checkbox>input {
-      position: absolute;
-      z-index: -1;
-      opacity: 0;
+      gap: 20px;
     }
 
-    &-checkbox>span {
-      display: inline-flex;
-      align-items: center;
-      user-select: none;
-      font-size: 1.4rem;
-      line-height: var(--text-height-135);
-      font-family: var(--text-sofia-condensed);
-      text-transform: uppercase;
-    }
-
-
-    &-checkbox>span::before {
-      content: '';
+    &-checkbox {
       display: inline-block;
-      width: 18px;
-      height: 18px;
-      flex-shrink: 0;
-      flex-grow: 0;
-      margin-right: 10px;
-      border: 1px solid var(--gray-e1);
-      border-radius: 1px;
-      background-repeat: no-repeat;
-      background-position: center center;
+      cursor: pointer;
     }
 
-    &-checkbox>input:not(:disabled):checked+span::before {
-      border-color: var(--green);
-      background-image: url("../img/check.svg");
+    &-checkbox input[type="checkbox"] {
+      display: none; /* Скрываем стандартный чекбокс */
     }
+
+    &-checkbox span {
+      display: inline-block;
+      padding: 9.5px 30px;
+      font-size: 1.4rem;
+      line-height: 120%;
+      font-weight: 300;
+      border: 1px solid var(--green);
+      color: var(--black);
+      border-radius: 4px;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    &-checkbox input[type="checkbox"]:checked + span {
+      background-color: var(--green);
+      color: var(--white);/* Цвет кнопки, когда чекбокс выбран */
+    }
+
 
     &-btns {
       margin-left: auto;
@@ -76,77 +108,136 @@
   }
 
   &__list {
-    gap: 20px;
-
-    &:not(:last-child) {
-      margin-bottom: 47px;
-    }
-    &-title {
-      font-size: 2.6rem;
-      font-family: var(--text-sofia-condensed);
-      line-height: var(--text-height-110);
-      text-transform: uppercase;
-    }
+    gap: 40px;
   }
 
   &__item {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     justify-content: space-between;
     gap: 20px;
     border-radius: 8px;
-    background-color: var(--gray-f5);
+    background-color: var(--white);
     padding: 30px;
 
-    &-filter {
-      border-radius: 4px;
-      display: inline-block;
-      border: 1px solid var(--blue);
-      padding: 4px 18px;
-      margin-bottom: 10px;
-      color: var(--blue);
-      text-transform: uppercase;
-      font-size: var(--text-size-12);
-      font-weight: var(--text-height-100);
+    &-left {
+      width: 200px;
+      flex-shrink: 0;
     }
 
-    &-name {
-      font-size: 2.4rem;
-      font-family: var(--text-sofia-condensed);
-      font-weight: var(--text-semibold);
-      line-height: var(--text-height-135);
-      margin-bottom: 10px;
+    &-img {
+      position: relative;
     }
 
-    &-date {
-      line-height: var(--text-height-135);
-      text-transform: uppercase;
+    &-increase {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: 1;
+      background-color: transparent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: opacity .3s ease-in-out;
 
-      &-span {
-        margin-left: 6px;
-        font-size: var(--text-size-12);
-        line-height: var(--text-height-135);
-        font-weight: var(--text-regular);
+      &-svg {
+        background-color: var(--green);
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      &:hover {
+        opacity: 1;
       }
     }
 
-    &-link {
+    &-right {
+      width: 100%;
+      flex-shrink: 1;
+      gap: 30px;
+    }
+
+    &-descr {
+      gap: 20px;
+    }
+
+    &-name {
+      font-family: "Sofia Sans Condensed";
+      font-weight: 500;
+      font-size: 3rem;
+      line-height: 120%;
+      text-transform: uppercase;
+      margin-right: 10px;
+    }
+
+    &-filter {
+      font-weight: 300;
+      font-size: 1.4rem;
+      line-height: 120%;
+      border: 1px solid var(--green);
+      border-radius: 20px;
+      flex-shrink: 0;
+      padding: 7px 30px;
+    }
+
+    &-text {
+      font-size: 1.6rem;
+      line-height: 120%;
+      font-weight: 300;
+      max-width: 623px;
+      width: 100%;
+
+      &-wrap {
+        width: 100%;
+      }
+    }
+
+    &-download {
+      @include btn();
       display: flex;
       align-items: center;
       gap: 10px;
-      text-transform: uppercase;
-      font-size: var(--text-size-14);
-      line-height: var(--text-height-100);
-      font-family: var(--text-sofia-condensed);
-      font-weight: var(--text-semibold);
-      color: var(--white);
-      background-color: var(--green);
+      border: 1px solid var(--green);
       border-radius: 4px;
-      padding: 7px 20px;
+      padding: 7px 50px;
+
+      span:first-child {
+        svg path {
+          transition: fill .3s ease-in-out;
+        }
+      }
+
+      &:hover {
+        span:first-child {
+          svg path {
+            fill: var(--white)
+          }
+        }
+      }
     }
 
-    &-svg {
+    &-bottom {
+      gap: 10px;
+      &-descr {
+        gap: 8px;
+      }
 
+      &-text {
+        font-size: 18px;
+        font-family: "Sofia Sans Semi Condensed";
+        line-height: 135%;
+        text-transform: uppercase;
+        span:first-child {
+          margin-right: 6px;
+        }
+      }
     }
   }
 
@@ -165,112 +256,46 @@
   }
 
   &__modal {
-    &-content {
-      border-radius: 12px;
-      border: none;
-    }
 
-    &-header {
-      border-bottom: none;
+    &-content {
+      background-color: transparent;
+      border: 0;
     }
 
     &-body {
-      padding: 0 40px 40px;
-    }
+      background-color: transparent;
+      max-height: 90vh;
 
-    &-swiper {
-      max-width: 266px;
-      width: 100%;
-    }
 
-    &-wrap {
-      gap: 50px;
-    }
-
-    &-title {
-      font-family: var(--text-sofia-condensed);
-      font-size: 28px;
-      line-height: var(--text-height-110);
-      margin-bottom: 16px;
-    }
-
-    &-date {
-      font-size: var(--text-size-14);
-      line-height: var(--text-height-135);
-      text-transform: uppercase;
-      margin-bottom: 30px;
-      span {
-        margin-left: 6px;
-        font-size: var(--text-size-16);
-        line-height: var(--text-height-135);
-        font-family: var(--text-sofia-condensed);
-        font-weight: 600;
+      img {
+        max-height: 90vh;
+        object-fit: contain;
       }
     }
 
-    &-descr {
-      font-size: var(--text-size-16);
-      line-height: var(--text-height-135);
-      margin-bottom: 24px;
-    }
+    &-close {
+      position: absolute;
+      top: 20px;
+      right: 40px;
 
-    &-link {
-      border: 1px solid var(--green);
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 4px;
-      font-size: var(--text-size-14);
-      line-height: var(--text-height-100);
-      padding: 8px 20px;
-      text-transform: uppercase;
-      transition: color .3s ease-in-out, background-color .3s ease-in-out;
-      span {
-        margin-left: 10px;
-        svg path{
-          transition: fill .3s ease-in-out;
-        }
-      }
-
-      &:hover {
-        background-color: var(--green);
-        color: var(--white);
-
-        span svg path {
-          fill: var(--white);
-        }
+      &-btn {
+        width: 26px;
+        height: 26px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
     }
-
-  }
-
-  &__pagination {
-    padding-top: 15px;
-    margin: 0 auto;
-    @include pagination(100px, var(--green))
   }
 }
 
 @media screen and (max-width: 991px) {
   .licenses {
-    &__filter {
+    &__top {
       flex-direction: column;
-
-      &-btns {
-        margin-left: 0;
-      }
+      align-items: start;
+      gap: 20px;
     }
-
-    &__modal {
-      &-swiper {
-        margin: 0 auto;
-      }
-      &-link {
-        display: flex;
-      }
-    }
-
-
 
   }
 }
@@ -279,67 +304,79 @@
   .licenses {
     padding: 80px 0 60px;
 
+    &__pages-header {
+      margin-bottom: 18px;
+    }
+
+    &__filter {
+      margin-bottom: 30px;
+
+      &-list {
+        gap: 14px;
+      }
+
+      &-checkbox span {
+        padding: 10.5px 25px;
+      }
+    }
+
     &__content {
       padding-top: 40px;
     }
 
-
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .licenses {
     &__list {
-      &-name {
-        font-size:var(--text-size-18);
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .licenses {
-    &__pages-header {
-      margin-bottom: 20px;
-    }
-
-    &__filter {
-      &-list {
-        column-gap: 10px;
-        row-gap: 16px;
-      }
-
-      &-item {
-        width: calc(100% / 2 - 10px);
-      }
-
-      &-btns {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-
-      &-btn {
-        width: 100%;
-        height: 100%;
-        &-all {
-          margin-right: 0;
-        }
-      }
-    }
-
-    &__list {
-      &-title {
-        font-size: var(--text-size-20);
-      }
+      gap: 20px;
     }
 
     &__item {
-      flex-direction: column;
-      align-items: start;
+      padding: 20px;
+      &-top {
+        gap: 20px;
+      }
 
       &-name {
-        width: 84%;
+        font-size: 2.4rem;
+        margin-right: 0;
+      }
+
+      &-right {
+        gap: 16px;
+      }
+
+      &-bottom {
+        gap: 16px;
+
+        &-text {
+          font-size: 1.6rem;
+        }
+      }
+
+      &-download {
+        width: 100%;
+      }
+    }
+
+    &__open {
+      margin-top: 4px;
+    }
+
+    &__modal {
+      &-close {
+        width: 16px;
+        height: 16px;
+        top: 10px;
+        right: 10px;
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+      }
+
+      &-body {
+        max-height: 80vh;
+        img {
+          max-height: 80vh;
+        }
       }
     }
   }
