--- a/src/scss/components/main/about.scss
+++ b/src/scss/components/main/about.scss
@@ -1,12 +1,12 @@
 .main-about {
-  padding: 55px 0;
+  padding: 80px 0;
 
   &__content {
     gap: var(--gap-30);
   }
 
   &__left {
-    max-width: 386px;
+    max-width: 437px;
     width: 100%;
   }
 
@@ -17,8 +17,10 @@
   }
 
   &__title {
-    margin-bottom: 20px;
-    max-width: 534px;
+    margin-bottom: 30px;
+    max-width: 644px;
+    font-size: 4.4rem;
+    line-height: 120%;
   }
 
   &__block {
@@ -31,42 +33,51 @@
   }
 
   &__descr {
-    gap: var(--gap-16);
-    margin-bottom: 20px;
+    max-width: 812px;
+    gap: var(--gap-24);
+  }
+
+  &__text {
+    font-size: 1.6rem;
+    line-height: 120%;
+    font-weight: 300;
   }
 
   &__icons {
-    gap: 35px;
+    gap: 34px;
   }
 
   &__icon {
     width: 100%;
     background: var(--green-gradient);
     gap: var(--gap-12);
-    border-radius: 6px;
-    padding: 26px 20px;
+    border-radius: 4px;
+    padding: 28px 30px;
 
     &-svg {
-      width: 50px;
-      height: 50px;
+      width: 60px;
+      height: 60px;
       display: flex;
       align-items: center;
       justify-content: center;
     }
 
     &-text {
+      font-weight: 500;
       color: var(--white);
+      font-size: 2.4rem;
+      line-height: 120%;
     }
   }
 
   &__link {
     display: inline-block;
     color: var(--black);
-    font-size: var(--text-size-14);
+    font-size: var(--text-size-16);
     line-height: var(--text-height-135);
     text-transform: uppercase;
-    font-weight: var(--text-semibold);
-    font-family: var(--text-sofia-condensed);
+    font-weight: 400;
+    font-family: "Sofia Sans Semi Condensed";
     border-bottom: 1px solid var(--gray-secondary);
 
     &-mobile {
@@ -80,7 +91,7 @@
 
     &__left {
       max-width: none;
-      gap: var(--gap-20);
+      gap: var(--gap-30);
     }
 
     &__title {
@@ -94,11 +105,11 @@
     &__icon {
       width: calc(100% / 2 - (20px) / 2);
       &-svg {
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
          svg {
-           width: 40px;
-           height: 40px;
+           width: 50px;
+           height: 50px;
          }
       }
     }
@@ -119,32 +130,7 @@
 
 @media screen and (max-width: 767px) {
   .main-about {
-    padding: 30px 0;
-
-    &__title {
-      margin-bottom: var(--gap-12);
-    }
-
-    &__description {
-      gap: var(--gap-30);
-    }
-
-    &__icon {
-      &-svg {
-        width: 30px;
-        height: 30px;
-
-        svg {
-          width: 30px;
-          height: 30px;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .main-about {
+    padding: 35px 0;
 
     &__right {
       &-top {
@@ -153,20 +139,41 @@
     }
 
     &__title {
-      margin-bottom: 16px;
+      font-size: 2.8rem;
+      line-height: 120%;
+      margin-bottom: 20px;
+    }
+
+    &__description {
+      gap: var(--gap-30);
     }
 
     &__descr {
+      gap: 20px;
       margin-bottom: 0;
     }
 
     &__icons {
-      gap: var(--gap-12);
+      gap: var(--gap-16);
     }
 
     &__icon {
       width: 100%;
-      padding: 16px 20px;
+      gap: 16px;
+      padding: 20px;
+      &-svg {
+        width: 50px;
+        height: 50px;
+
+        svg {
+          width: 50px;
+          height: 50px;
+        }
+      }
+
+      &-text {
+        font-size: 1.8rem;
+      }
     }
   }
 }
