--- a/src/scss/components/main/facts.scss
+++ b/src/scss/components/main/facts.scss
@@ -1,16 +1,20 @@
 .facts {
-  padding: 70px 0;
+  padding: 80px 0;
 
   &__content {
     gap: var(--gap-30);
   }
 
   &__title {
-    line-height: var(--text-height-130);
+    font-size: 4.4rem;
+    line-height: var(--text-height-110);
     &-link {
       gap: 30px;
-      margin-bottom: 10px;
+      width: 100%;
+      justify-content: space-between;
+      margin-bottom: 30px;
       &-svg {
+        flex-shrink: 0;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -24,6 +28,11 @@
 
   &__text {
     opacity: 70%;
+    font-size: 2rem;
+    line-height: 120%;
+    font-weight: 400;
+    font-family: "Sofia Sans";
+    text-transform: uppercase;
   }
 
   &__items {
@@ -36,31 +45,36 @@
     min-height: 180px;
     border-radius: 4px;
     background-color: var(--gray-light);
-    padding: 20px;
+    padding: 35px 24px;
     display: flex;
     gap: 26px;
     align-items: center;
     &-title {
-      margin-bottom: 10px;
-      max-width: 190px;
+      margin-bottom: 12px;
       width: 100%;
-      text-transform: uppercase;
-      font-size: var(--text-size-30);
+      font-size: 3rem;
       font-family: var(--text-sofia-condensed);
-      line-height: var(--text-height-100);
-      font-weight: var(--text-weight-bold);
+      line-height: var(--text-height-120);
+      text-transform: uppercase;
+      font-weight: 700;
+      span {
+        font-size: 6rem;
+      }
     }
 
     &-text {
       opacity: 70%;
-      text-transform: uppercase;
-
+      font-size: 1.6rem;
+      line-height: 120%;
+      font-weight: 300;
+      max-width: 271px;
     }
 
     &:first-child {
       background-color: transparent;
       flex-direction: column;
       justify-content: center;
+      padding: 0;
       gap: 0;
       align-items: start;
     }
@@ -72,30 +86,37 @@
       justify-content: end;
       gap: 0;
       grid-row: 1 / 3;
-      background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 100%);
+      background: linear-gradient(180deg, rgba(0, 185, 130, 0.72) 0%, rgba(3, 140, 100, 0.675) 102.17%);
+
 
       h3 {
         color: var(--white);
-        margin-bottom: 10px;
+        margin-bottom: 16px;
+        text-transform: uppercase;
         font-family: var(--text-sofia-condensed);
         font-weight: 700;
-        font-size: var(--text-size-80);
+        font-size: var(--text-size-90);
         line-height: var(--text-height-100);
         max-width: none;
       }
 
       p{
         color: var(--white);
-        max-width: 250px;
+        max-width: 311px;
+        font-size: 1.6rem;
+        line-height: 120%;
+        font-weight: 300;
         width: 100%;
+        text-transform: none;
       }
     }
+
   }
 
   &__svg {
     flex-shrink: 0;
-    width: 71px;
-    height: 64px;
+    width: 75px;
+    height: 75px;
     background-color: var(--green);
   }
 }
@@ -117,7 +138,19 @@
 
 @media screen and (max-width: 767px) {
   .facts {
-    padding: 30px 0;
+    padding: 30px 0 45px;
+
+    &__title {
+      font-size: 2.8rem;
+      &-link {
+        margin-bottom: 16px;
+        &-svg {
+          width: 26px;
+          height: 26px;
+        }
+      }
+
+    }
 
     &__items {
       grid-template-columns: 1fr;
@@ -126,16 +159,27 @@
 
     &__item {
       min-height: 126px;
+      padding: 20px;
 
+      &-title {
+        margin-bottom: 10px;
+        span {
+          font-size: 4.5rem;
+        }
+      }
       &-text {
+        font-size: 1.4rem;
         max-width: none;
       }
 
       &:first-child {
         min-height: 100px;
         padding: 0;
-        gap: var(--gap-16);
         justify-content: start;
+        p {
+          max-width: none;
+          font-size: 1.6rem;
+        }
       }
 
       &:nth-child(2) {
@@ -152,13 +196,16 @@
 
         p {
           text-align: center;
-          max-width: 217px;
-          font-size: var(--text-size-16);
-          font-weight: var(--text-regular);
+          max-width: 272px;
+          font-size: var(--text-size-14);
         }
       }
     }
 
+    &__svg {
+      width: 71px;
+      height: 64px;
+    }
 
     &__text {
       max-width: 284px;
