--- a/src/scss/components/qp/qp.scss
+++ b/src/scss/components/qp/qp.scss
@@ -1,15 +1,15 @@
 .qp {
-  margin-top: 83px;
+  margin-top: 92px;
 
   &__hero {
     position: relative;
-    min-height: 596px;
+    min-height: 718px;
     width: 100%;
     background-color: var(--blue);
     display: flex;
     align-items: center;
 
-    &_img {
+    &-img {
       position: absolute;
       top: 0;
       left: 0;
@@ -18,8 +18,7 @@
     }
 
     &-descr {
-      padding: 30px 0;
-      max-width: 600px;
+      max-width: 548px;
       width: 100%;
     }
   }
@@ -29,30 +28,30 @@
 
     p {
       font-size: var(--text-size-16);
-      line-height: var(--text-height-140);
-      font-weight: var(--text-regular);
+      line-height: var(--text-height-120);
+      font-weight: 300;
 
       &:not(:last-child) {
-        margin-bottom: 16px;
+        margin-bottom: 20px;
       }
     }
 
     h3 {
       font-family: var(--text-sofia-condensed);
       font-weight: 700;
-      font-size: var(--text-size-35);
-      line-height: var(--text-height-100);
+      font-size: 4.4rem;
+      line-height: var(--text-height-110);
       text-transform: uppercase;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
     }
 
     h4 {
       font-family: var(--text-sofia-condensed);
       font-weight: 700;
-      font-size: 26px;
-      line-height: var(--text-height-110);
+      font-size: 28px;
+      line-height: var(--text-height-100);
       text-transform: uppercase;
-      margin-bottom: 16px;
+      margin-bottom: 20px;
     }
   }
 
@@ -60,45 +59,62 @@
     row-gap: 60px;
   }
 
+  &__breadcrumb {
+    margin-bottom: 60px;
+  }
+
   &__title {
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    font-size: 4.4rem;
+    font-family: "Sofia Sans Condensed";
+    font-weight: 700;
+    line-height: 110%;
     color: var(--white);
   }
 
   &__text {
+    font-size: 2rem;
+    line-height: 120%;
+    font-weight: 300;
     color: var(--white);
   }
 
   &__left {
     padding-right: 15px;
     &-title {
-      gap: 40px;
-      max-width: 646px;
+      column-gap: 40px;
+      row-gap: 20px;
       width: 100%;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
+      flex-wrap: wrap;
+
 
       &-text {
         line-height: var(--text-height-110);
+        flex: 1 1 300px;
+        max-width: 502px;
+        font-size: 4.4rem;
       }
     }
 
     &-descr {
       &:not(:last-child) {
-        margin-bottom: 60px;
+        margin-bottom: 120px;
       }
     }
 
     &-advantages {
-      margin-bottom: 90px;
+      margin-bottom: 120px;
       &-list {
-        gap: 12px;
+        gap: 16px;
       }
 
       &-item {
-        padding: 16px 20px;
+        padding: 13px 20px 12px;
         border-radius: 6px;
         background-color: var(--gray-f5);
         display: flex;
+        font-family: "Sofia Sans Semi Condensed";
         align-items: center;
         text-transform: uppercase;
         font-size: 1.6rem;
@@ -107,13 +123,13 @@
 
       &-svg {
         flex: 0 0 auto;
-        width: 30px;
-        height: 30px;
+        width: 40px;
+        height: 40px;
         background-color: var(--blue);
         margin-right: 20px;
         svg {
-          width: 30px;
-          height: 30px;
+          width: 40px;
+          height: 40px;
         }
       }
 
@@ -124,7 +140,7 @@
     &-props {
       display: flex;
       gap: 30px;
-      margin-bottom: 40px;
+      margin-bottom: 60px;
 
       &-item {
         width: calc(100% / 2 - 15px);
@@ -146,14 +162,14 @@
           border-radius: 6px;
           display: flex;
           flex-direction: column;
-          gap: 12px;
+          gap: 24px;
           height: 100%;
         }
 
         li {
           font-size: var(--text-size-16);
-          line-height: var(--text-height-140);
-          font-weight: var(--text-regular);
+          line-height: var(--text-height-120);
+          font-weight: 300;
           position: relative;
           padding-left: 22px;
           span {
@@ -193,6 +209,7 @@
       gap: 60px;
       &-top {
         height: 384px;
+        position: relative;
 
         img {
           max-width: 100%;
@@ -223,6 +240,20 @@
     &-btn {
       @include btnArray(var(--blue), var(--white));
     }
+
+    &-increase {
+      width: 40px;
+      height: 40px;
+      position: absolute;
+      opacity: 50%;
+      right: 20px;
+      bottom: 20px;
+      border-radius: 50%;
+      background-color: var(--green);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
 
   &__pagination {
@@ -235,16 +266,16 @@
 
     &-block {
       position: sticky;
-      top: 83px;
+      top: 103px;
     }
     &-list {
-      gap: 12px;
+      gap: 20px;
       margin-bottom: 40px;
     }
 
     &-item {
       font-size: var(--text-size-14);
-      line-height: var(--text-height-135);
+      line-height: var(--text-height-120);
       text-transform: uppercase;
       opacity: 70%;
     }
@@ -263,6 +294,8 @@
 
 
     &-title {
+      font-size: 3.6rem;
+      line-height: 120%;
       margin-bottom: var(--gap-20);
     }
 
@@ -310,6 +343,72 @@
         margin-bottom: 4px;
       }
     }
+
+    &-swiper {
+      &-content {
+        background-color: transparent;
+        padding: 0;
+        border: 0;
+      }
+
+      &-body {
+        background-color: transparent;
+        padding: 0;
+        border: 0;
+        max-height: 80vh;
+      }
+
+      &-top {
+        max-height: 70vh;
+        margin-bottom: 25px;
+        img {
+          max-height: 70vh;
+          object-fit: contain;
+        }
+      }
+
+      &-bottom {
+        display: flex;
+        justify-content: center;
+        font-weight: 300;
+        font-size: 1.6rem;
+        line-height: 120%;
+        text-align: center;
+        color: var(--white);
+      }
+
+      &-btn {
+        position: absolute;
+        width: 39px;
+        height: 39px;
+        top: 40%;
+        border: 1px solid var(--white);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: background-color .3s ease-in-out;
+
+        svg path {
+          transition: fill .3s ease-in-out;
+        }
+
+        &:hover {
+          background-color: var(--white);
+
+          svg path {
+            fill: var(--blue);
+          }
+        }
+      }
+
+      &-prev {
+        left: 70px;
+      }
+
+      &-next {
+        right: 70px;
+      }
+    }
   }
 
   &__form {
@@ -328,6 +427,7 @@
     &-btn {
       @include btn;
       min-width: 177px;
+      border-color: var(--blue);
     }
 
     &-check {
@@ -360,6 +460,7 @@
 @media screen and (max-width: 991px) {
   .qp__left {
     &-props {
+      gap: 40px;
       &:not(:last-child) {
         margin-bottom: 40px;
       }
@@ -372,19 +473,24 @@
 
 @media screen and (max-width: 767px) {
   .qp {
-    margin-top: 80px;
+    margin-top: 88px;
 
     &__content {
       padding: 45px 0 60px;
 
       h3 {
-        font-size: 2.6rem;
-        margin-bottom: 16px;
+        font-size: 2.8rem;
+        margin-bottom: 20px;
       }
 
       h4 {
-        font-size: var(--text-size-18);
+        font-size: 22px;
+        line-height: 120%;
       }
+    }
+
+    &__breadcrumb {
+      margin-bottom: 30px;
     }
 
     &__hero {
@@ -392,7 +498,7 @@
       align-items: start;
 
       &-descr {
-        padding: 24px 0;
+        padding: 30px 0;
         max-width: none;
         width: 93.05%;
       }
@@ -401,36 +507,51 @@
     &__left {
       padding-right: 0;
       &-title {
-        max-width: 516px;
-        gap: 20px;
+        row-gap: 20px;
+        column-gap: 20px;
+        margin-bottom: 20px;
         &-svg svg {
-          width: 130px;
-          height: 48px;
+          width: 120px;
+          height: 44px;
         }
         &-text {
-          font-size: 2.6rem;
+          font-size: 2.8rem;
+          line-height: 120%;
+        }
+      }
+
+      &-descr {
+        &:not(:last-child) {
+          margin-bottom: 70px;
         }
       }
 
       &-advantages {
-        margin-bottom: 40px;
-
-        &-list {
-          gap: 10px;
-        }
+        margin-bottom: 70px;
 
         &-item {
-          padding: 10px 16px;
+          padding: 16px 16px;
           border-radius: 4px;
-          font-size: 1.2rem;
-          &-svg {
+          font-size: 1.4rem;
+          line-height: 120%;
+        }
+
+        &-svg {
+          width: 26px;
+          height: 26px;
+          margin-right: 12px;
+          svg {
             width: 26px;
             height: 26px;
-            margin-right: 12px;
-            svg {
-              width: 26px;
-              height: 26px;
-            }
+          }
+        }
+      }
+
+      &-props {
+
+        &-item {
+          ul {
+            gap: 20px;
           }
         }
       }
@@ -443,7 +564,7 @@
 
     &__swiper {
       &-slide {
-        gap: 12px;
+        gap: 48px;
         &-top {
           height: 250px;
           img {
@@ -452,7 +573,7 @@
         }
 
         &-bottom {
-          font-size: var(--text-size-10);
+          font-size: var(--text-size-14);
         }
       }
 
@@ -460,21 +581,34 @@
         background-color: var(--white);
       }
 
+      &-increase {
+        width: 30px;
+        height: 30px;
+      }
+
+      &-btn {
+        display: none;
+      }
+
       &-navigation {
-        left: 6px;
-        right: 6px;
-        top: 112px;
+        top: 270px;
       }
     }
 
     &__pagination {
-      display: none;
+      padding: 0 0;
+      max-width: none;
     }
 
     &__title {
-      font-size: 3rem;
+      font-size: 2.8rem;
       line-height: var(--text-height-120);
-      margin-bottom: var(--gap-20);
+      margin-bottom: 16px;
+    }
+
+    &__text {
+      font-size: 1.6rem;
+      line-height: 120%;
     }
 
     &__modal {
@@ -490,6 +624,13 @@
       }
       &-form {
         gap: var(--gap-16);
+      }
+
+      &-swiper {
+        &-btn {
+          display: none;
+        }
+
       }
     }
 
@@ -524,15 +665,15 @@
 
     &__swiper {
       &-top {
-        height: 184px;
+        height: 180px;
         img {
-          max-height: 184px;
+          max-height: 180px;
         }
       }
     }
 
     &__navigation {
-      top: 68px;
+      top: 190px;
     }
 
     &__modal {
