fix fonts and html lang

--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,14 +1,14 @@
 
 @font-face {
   font-family: "Sofia Sans";
-  src: url("../fonts/sofiasans-light.woff2") format("woff2");
+  src: url("../fonts/SofiaSans-Light.woff2") format("woff2");
   font-weight: 300;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Sofia Sans";
-  src: url("../fonts/sofiasans-regular.woff2") format("woff2");
+  src: url("../fonts/SofiaSans-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
@@ -16,21 +16,21 @@
 
 @font-face {
   font-family: "Sofia Sans Condensed";
-  src: url("../fonts/sofiasanscondensed-medium.woff2") format("woff2");
+  src: url("../fonts/SofiaSansCondensed-Medium.woff2") format("woff2");
   font-weight: 500;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Sofia Sans Condensed";
-  src: url("../fonts/sofiasanscondensed-bold.woff2") format("woff2");
+  src: url("../fonts/SofiaSansCondensed-Bold.woff2") format("woff2");
   font-weight: 700;
   font-display: swap;
 }
 
 @font-face {
   font-family: "Sofia Sans Semi Condensed";
-  src: url("../fonts/sofiasanssemicondensed-regular.woff2") format("woff2");
+  src: url("../fonts/SofiaSansSemiCondensed-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
